# uart-mcp

./: .gitignore  .mcp.json  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
uart_mcp/: __main__.py  serial_conn.py  server.py
