[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "uart-mcp"
version = "0.3.0"
description = "MCP server bridging Claude Code to a UART serial shell"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
    "pyserial>=3.5",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
]

[project.scripts]
uart-mcp = "uart_mcp.server:main"
